--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="AI Compliance Pack - Psychology Squared">
     <meta property="og:description" content="Essential AI compliance materials for Australian psychologists. Now available.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://psychologysquared.com.au">
+    <meta property="og:url" content="https://aiforclin.com">
     
     <title>AI Compliance Pack - Psychology Squared</title>
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet">
